--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -15,6 +15,8 @@ RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py; \
 	python3 get-pip.py; \
 	rm get-pip.py
 
+RUN pip install pipenv
+
 RUN curl https://pyenv.run | bash
 
 ENTRYPOINT /bin/bash
