orbs jobs arguments are now optional

--- a/circle-orbs/rsync.yml
+++ b/circle-orbs/rsync.yml
@@ -33,6 +33,7 @@ commands:
                 default: true
             arguments:
                 type: string
+                default: ''
         steps:
         - run:
             name: Gathering the public SSH
