--- a/circle-orbs/s3.yml
+++ b/circle-orbs/s3.yml
@@ -31,6 +31,7 @@ commands:
                 default: true
             arguments:
                 type: string
+                default: ''
         steps:
             - run:
                 name: "Deploying folder to s3: << parameters.src >> > s3:<< parameters.bucket_name >>/<< parameters.dest >>"
@@ -58,6 +59,7 @@ commands:
                 default: private, max-age:3600
             arguments:
                 type: string
+                default: ''
         steps:
             - run:
                 name: "Deploying file to s3: << parameters.src >> > s3:<< parameters.bucket_name >>/<< parameters.dest >>"
