--- a/circle-orbs/s3.yml
+++ b/circle-orbs/s3.yml
@@ -26,6 +26,9 @@ commands:
                 type: string
             dest:
                 type: string
+            acl:
+                type: string
+                default: private
             overwrite:
                 type: boolean
                 default: true
@@ -36,7 +39,7 @@ commands:
             - run:
                 name: "Deploying folder to s3: << parameters.src >> > s3:<< parameters.bucket_name >>/<< parameters.dest >>"
                 command: |
-                    aws s3 sync --acl private \
+                    aws s3 sync --acl << parameters.acl >> \
                         --cache-control "private, max-age:3600" \
                         <<# parameters.overwrite >>--delete <</ parameters.overwrite >>\
                         "<< parameters.src >>" "s3://<< parameters.bucket_name >>/<< parameters.dest >>"\
@@ -52,6 +55,9 @@ commands:
             dest:
                 type: string
                 default: ""
+            acl:
+                type: string
+                default: private
             content_type:
                 type: string
             cache_control:
@@ -64,7 +70,7 @@ commands:
             - run:
                 name: "Deploying file to s3: << parameters.src >> > s3:<< parameters.bucket_name >>/<< parameters.dest >>"
                 command: >
-                    aws s3 cp "<< parameters.src >>" "s3://<< parameters.bucket_name >>/<< parameters.dest >>" \
+                    aws s3 cp --acl << parameters.acl >> "<< parameters.src >>" "s3://<< parameters.bucket_name >>/<< parameters.dest >>" \
                         --cache-control "<< parameters.cache_control >>" \
                         --content-type "<< parameters.content_type >>"\
                         <<# parameters.arguments >> << parameters.arguments >><</ parameters.arguments >>;
