--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,5 +1,5 @@
 
-FROM node:10-alpine
+FROM alpine:3.12
 
 RUN apk add --update \
 	zip \
@@ -10,6 +10,15 @@ RUN apk add --update \
 	make \
 	ca-certificates \
 	openssh-client
+
+RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.0/install.sh | bash
+
+RUN nvm install 8 & \
+	nvm install 10 & \
+	nvm install 12 & \
+	nvm install 14 & \
+	nvm use 12 & \
+	nvm alias default 12
 
 RUN rm -rf /var/cache/apk/*
 
