--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -14,14 +14,14 @@ RUN apk add --update \
 RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.0/install.sh | bash
 
 ENV NVM_DIR="/root/.nvm"
-RUN [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
+# RUN [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
+RUN source $NVM_DIR/nvm.sh
 
-RUN nvm install 8 && \
-	nvm install 10 && \
-	nvm install 12 && \
-	nvm install 14 && \
-	nvm use 12 && \
-	nvm alias default 12
+ENV DEFAULT_NODE_VERSION=12
+
+RUN nvm install $DEFAULT_NODE_VERSION && \
+	nvm use $DEFAULT_NODE_VERSION && \
+	nvm alias default $DEFAULT_NODE_VERSION
 
 RUN rm -rf /var/cache/apk/*
 
