--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -15,7 +15,7 @@ RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.0/install.sh
 
 ENV NVM_DIR="/root/.nvm"
 # RUN [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
-RUN source $NVM_DIR/nvm.sh
+RUN . "$NVM_DIR/nvm.sh"
 
 ENV DEFAULT_NODE_VERSION=12
 
@@ -24,5 +24,8 @@ RUN nvm install $DEFAULT_NODE_VERSION && \
 	nvm alias default $DEFAULT_NODE_VERSION
 
 RUN rm -rf /var/cache/apk/*
+
+RUN node -v
+RUN nvm -v
 
 ENTRYPOINT /bin/bash
