--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -11,7 +11,7 @@ RUN apk add --update \
 	ca-certificates \
 	openssh-client
 
-RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.0/install.sh | bash
+RUN curl --silent -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.0/install.sh | bash
 
 ENV NVM_DIR="/root/.nvm"
 # RUN [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
