fix: back to file backed credentials

--- a/aws/.aws/config
+++ b/aws/.aws/config
@@ -3,44 +3,43 @@ region = eu-central-1
 
 [profile Aplazame]
 region = eu-central-1
-credential_source = Environment
 
 [profile AplazameProd]
 role_arn = arn:aws:iam::554620132321:role/AplazameProdAppDeployer
-credential_source = Environment
+source_profile = Aplazame
 region = eu-central-1
 
 [profile AplazameStaging]
 role_arn = arn:aws:iam::607842286676:role/AplazameStagingAppDeployer
-credential_source = Environment
+source_profile = Aplazame
 region = eu-central-1
 
 [profile AplazameDev]
 role_arn = arn:aws:iam::962405273365:role/AplazameDevAppDeployer
-credential_source = Environment
+source_profile = Aplazame
 region = eu-central-1
 
 [profile AplazameSharedServices]
 role_arn = arn:aws:iam::666356151544:role/AplazameSharedServicesAppDeployer
-credential_source = Environment
+source_profile = Aplazame
 region = eu-central-1
 
 [profile AplazameDataProd]
 role_arn = arn:aws:iam::808207195014:role/AplazameDataProdAppDeployer
-credential_source = Environment
+source_profile = Aplazame
 region = eu-central-1
 
 [profile AplazameDataDev]
 role_arn = arn:aws:iam::302835715972:role/AplazameDataDevAppDeployer
-credential_source = Environment
+source_profile = Aplazame
 region = eu-central-1
 
 [profile AplazameLab]
 role_arn = arn:aws:iam::858652523650:role/AplazameLabAppDeployer
-credential_source = Environment
+source_profile = Aplazame
 region = eu-central-1
 
 [profile AplazameTest]
 role_arn = arn:aws:iam::428017099665:role/AplazameTestAppDeployer
-credential_source = Environment
+source_profile = Aplazame
 region = eu-central-1
