--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,5 +1,4 @@
-
-FROM alpine:3.12
+FROM node:12-alpine
 
 RUN apk add --update \
 	zip \
@@ -11,21 +10,6 @@ RUN apk add --update \
 	ca-certificates \
 	openssh-client
 
-RUN curl --silent -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.0/install.sh | bash
-
-ENV NVM_DIR="$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.nvm" || printf %s "${XDG_CONFIG_HOME}/nvm")"
-# RUN [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
-RUN . "$NVM_DIR/nvm.sh"
-
-ENV DEFAULT_NODE_VERSION=12
-
-RUN nvm install $DEFAULT_NODE_VERSION && \
-	nvm use $DEFAULT_NODE_VERSION && \
-	nvm alias default $DEFAULT_NODE_VERSION
-
 RUN rm -rf /var/cache/apk/*
-
-RUN node -v
-RUN nvm -v
 
 ENTRYPOINT /bin/bash
