feat: New aws-nuke image

--- a/aws-nuke/Dockerfile
+++ b/aws-nuke/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.12.1
 
-ARG VERSION=2.14.0
+ARG VERSION=2.15.0
 
 WORKDIR /tmp
 
@@ -11,13 +11,9 @@ RUN apk add --no-cache \
         jq \
         python3 \
         py3-pip \
-        && pip3 install --upgrade pip \
-        && pip3 install \
-        awscli \
-        && rm -rf /var/cache/apk/*
-        && \
-        curl -o /usr/bin/aws-nuke -LJO https://github.com/rebuy-de/aws-nuke/releases/download/v${VERSION}/aws-nuke-v${VERSION}-linux-amd64 && \
-        chmod +x /usr/bin/aws-nuke \
+    && pip3 install --no-cache-dir --upgrade pip awscli \
+    && curl -o /usr/bin/aws-nuke -LJO https://github.com/rebuy-de/aws-nuke/releases/download/v${VERSION}/aws-nuke-v${VERSION}-linux-amd64 && \
+    chmod +x /usr/bin/aws-nuke 
 
 RUN adduser -S nroot
 
