feat: change Dockerfile

--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -11,14 +11,11 @@ RUN apk add --update \
 	unzip \
     jq \
     gettext \
-	openssh-client
+	openssh-client \
+	aws-cli 
 
 RUN rm -rf /var/cache/apk/*
 
-RUN curl https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o /tmp/awscliv2.zip && \
-    unzip -qq /tmp/awscliv2.zip -d /tmp/ && \
-    chmod +x /tmp/aws/install && \
-    /tmp/aws/install;
 
 COPY bin/ /opt/bin
 ENV PATH="/opt/bin:${PATH}"
